--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 <title>404 Page not found | Muizzkolapo</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
-<meta name="author" content="Muizz Kp">
+<meta name="author" content="Muizz Kolapo">
 <link rel="canonical" href="https://muizzkolapo.github.io/blog/404.html">
 <link crossorigin="anonymous" href="/blog/assets/css/stylesheet.6a98292fb8fa8cf0f3ba4042d4b75515c04267550f3ad49ff6271b5af9562443.css" integrity="sha256-apgpL7j6jPDzukBC1LdVFcBCZ1UPOtSf9icbWvlWJEM=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://muizzkolapo.github.io/blog/favicon.ico">
